Fix CSS challenge zoom on mobile

--- a/src/scss/css_challenges/46.scss
+++ b/src/scss/css_challenges/46.scss
@@ -1,6 +1,6 @@
 .css-challenge-46 {
-  height: 100vh;
-  width: 100vw;
+  height: 200vh;
+  width: 200vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,8 +10,8 @@
 
 .css-challenge-46__field {
   position: relative;
-  height: 400px;
-  width: 400px;
+  height: 600px;
+  width: 600px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -25,8 +25,8 @@
   appearance: none;
 
   outline: 0;
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   background: white;
   margin: 0;
   cursor: pointer;
@@ -38,5 +38,23 @@
   &:focus {
     background: #BC2819;
     border: 1px solid #E24E3F;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .css-challenge-46 {
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .css-challenge-46__field {
+    height: 400px;
+    width: 400px;
+  }
+
+  .pixel {
+    height: 20px;
+    width: 20px;
+
   }
 }
